Update services dockerfiles

--- a/polyaxon/beat/Dockerfile
+++ b/polyaxon/beat/Dockerfile
@@ -11,4 +11,4 @@ RUN pip3 install --no-cache-dir -r /requirements/crons/requirements.txt
 
 WORKDIR /polyaxon/polyaxon
 
-ENTRYPOINT ["celery", "-A", "polyaxon", "beat", "--loglevel=INFO"]
+ENTRYPOINT ["/bin/bash", "./entrypoint.sh"]
