--- a/polyaxon/monitor-resources/Dockerfile
+++ b/polyaxon/monitor-resources/Dockerfile
@@ -9,4 +9,6 @@ COPY . /polyaxon
 
 RUN pip3 install --no-cache-dir -r /requirements/monitor_resources/requirements.txt
 
-ENTRYPOINT ["python3", "polyaxon/manage.py",  "monitor_resources"]
+WORKDIR /polyaxon/polyaxon
+
+ENTRYPOINT ["/bin/bash", "./entrypoint.sh"]
