--- a/polyaxon/streams/Dockerfile
+++ b/polyaxon/streams/Dockerfile
@@ -11,4 +11,4 @@ RUN pip3 install --no-cache-dir -r /requirements/streams/requirements.txt
 
 WORKDIR /polyaxon/polyaxon
 
-ENTRYPOINT ["python3", "-m", "sanic", "streams.api.app", "--host=0.0.0.0", "--port=1337"]
+ENTRYPOINT ["/bin/bash", "./entrypoint.sh"]
