--- a/py2/DockerfileBase
+++ b/py2/DockerfileBase
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-MAINTAINER mourad mourafiq <mouradmourafiq@gmail.com>
+MAINTAINER mourad mourafiq <mourad@polyaxon.com>
 
 ENV LC_ALL C.UTF-8
 ENV LANG C.UTF-8
