--- a/py2/DockerfileBaseNpm
+++ b/py2/DockerfileBaseNpm
@@ -1,6 +1,6 @@
 FROM polyaxon/polyaxon-base2
 
-MAINTAINER mourad mourafiq <mouradmourafiq@gmail.com>
+MAINTAINER mourad mourafiq <mourad@polyaxon.com>
 
 # nvm environment variables
 ENV NVM_DIR /usr/local/nvm
