--- a/polyaxon/sidecar/Dockerfile
+++ b/polyaxon/sidecar/Dockerfile
@@ -1,4 +1,4 @@
-FROM polyaxon/polyaxon-core
+FROM polyaxon/polyaxon-service
 
 MAINTAINER mourad mourafiq <mourad@polyaxon.com>
 
@@ -7,6 +7,8 @@ ENV POLYAXON_SERVICE=sidecar
 WORKDIR /polyaxon
 COPY . /polyaxon
 
-RUN pip3 install --no-cache-dir -r /requirements/sidecar/requirements.txt
+RUN pip3 install --no-cache-dir -r /polyaxon/polyaxon/sidecar/requirements/requirements.txt
 
-ENTRYPOINT ["python3", "polyaxon/manage.py", "start_sidecar"]
+WORKDIR /polyaxon/polyaxon/sidecar
+
+ENTRYPOINT ["python3", "sidecar/__main__.py"]
