解决 http: server gave HTTP response to HTTPS client

--- a/polyaxon/dockerizer/Dockerfile
+++ b/polyaxon/dockerizer/Dockerfile
@@ -10,5 +10,6 @@ WORKDIR /polyaxon
 COPY . /polyaxon
 
 RUN pip3 install --no-cache-dir -r /requirements/dockerizer/requirements.txt
+RUN echo { "insecure-registries":["192.168.1.50:31813"] }  > /etc/docker/daemon.json
 
 ENTRYPOINT ["python3", "polyaxon/manage.py",  "build"]
